--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,10 @@ letter-spacing: 0.02em;
 color: #434455;
 }
 
+.effective-solution{
+    background-color: #2E2F42;
+}
+
 .main-title {
     font-family: "Roboto", sans-serif;
 font-size: 56px;
@@ -82,7 +86,6 @@ line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #ffffff;
-background: #2E2F42;
 }
 
 .main-btn {
@@ -91,7 +94,7 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
-color: #434455;
+color: #ffffff;
 background: #4D5AE5;
 }
 
@@ -139,6 +142,7 @@ color: #434455;
 }
 
 .teammembers {
+    background-color: #F4F4FD;
 }
 
 .teammembers-title {
@@ -148,10 +152,10 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2E2F42;
-background-color: #F4F4FD;
 }
 
 .teammembers-list {
+    background-color: #ffffff;
 }
 
 .teammembers-list-item {
