--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/*---------------------- BODY----------------------------- */
+/*----------------------------- BODY ----------------------------- */
 body {
     font-family: "Roboto", sans-serif;
     background-color: #ffffff;
@@ -15,6 +15,8 @@ ul, ol {
     padding-left: 0;
     margin-left: 0;
 }
+
+/*----------------------------- HEADER ----------------------------- */
 
 .header {
 }
@@ -57,6 +59,15 @@ letter-spacing: 0.02em;
 color: #2E2F42;
 }
 
+.header-navigation-list-item-link:hover,
+.header-navigation-list-item-link:focus,
+.header-contact-list-item-link:hover,
+.header-contact-list-item-link:focus,
+.main-btn:hover,
+.main-btn:focus {
+    color: #404bbf
+}
+
 .header-contact {
 }
 
@@ -74,6 +85,8 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
+
+/*----------------------------- EFFECTIVE SOLUTION ----------------------------- */
 
 .effective-solution{
     background-color: #2E2F42;
@@ -96,7 +109,10 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: #ffffff;
 background: #4D5AE5;
+cursor: pointer;
 }
+
+/*----------------------------- INFORMATION ----------------------------- */
 
 .information {
 }
@@ -111,7 +127,6 @@ background: #4D5AE5;
     margin: -1px;
     border: 0;
     padding: 0;
-    
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
@@ -140,6 +155,8 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
+
+/*----------------------------- TEAM ----------------------------- */
 
 .teammembers {
     background-color: #F4F4FD;
@@ -183,6 +200,8 @@ text-align: center;
 color: #434455;
 }
 
+/*----------------------------- SERVICE ----------------------------- */
+
 .service-title {
     font-family: "Roboto", sans-serif;
 font-size: 36px;
@@ -190,6 +209,7 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2E2F42;
+text-transform: capitalize;
 }
 
 .service-list {
@@ -217,6 +237,8 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
+
+/*----------------------------- FOOTER ----------------------------- */
 
 .footer {
     background-color: #2E2F42;
